Leo migration config

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -817,6 +817,9 @@ resourceTypes = {
       set_parent = {
         description = "set parent of notebook cluster"
       }
+      get_parent = {
+        description = "get parent of notebook cluster"
+      }
     }
     ownerRoleName = "creator"
     roles = {
@@ -849,6 +852,9 @@ resourceTypes = {
       }
       set_parent = {
         description = "set parent of persistent disk"
+      }
+      get_parent = {
+        description = "get parent of persistent disk"
       }
     }
     ownerRoleName = "creator"
