--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -824,7 +824,7 @@ resourceTypes = {
     ownerRoleName = "creator"
     roles = {
       creator = {
-        roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify", "set_parent"]
+        roleActions = ["status", "connect", "delete", "read_policies", "stop_start", "modify", "set_parent", "get_parent"]
       }
       manager = {
         roleActions = ["status", "delete", "read_policies"]
@@ -860,7 +860,7 @@ resourceTypes = {
     ownerRoleName = "creator"
     roles = {
       creator = {
-        roleActions = ["read", "attach", "modify", "delete", "read_policies", "set_parent"]
+        roleActions = ["read", "attach", "modify", "delete", "read_policies", "set_parent", "get_parent"]
       }
       manager = {
         roleActions = ["delete", "read", "read_policies"]
