--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -298,9 +298,7 @@ resourceAccessPolicies {
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This policy can be removed after the migration is complete.
       leo_migration {
-        memberEmails = [
-          ${terra.leo.migration.emails}
-        ]
+        memberEmails = ${terra.leo.migration.emails}
         descendantPermissions = [
           {
             resourceTypeName = "workspace",
@@ -447,9 +445,7 @@ resourceAccessPolicies {
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This policy can be removed after the migration is complete.
       leo_migration {
-        memberEmails = [
-          ${terra.leo.migration.emails}
-        ]
+        memberEmails = ${terra.leo.migration.emails}
         descendantPermissions = [
           {
             resourceTypeName = "notebook-cluster",
@@ -466,9 +462,7 @@ resourceAccessPolicies {
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This policy can be removed after the migration is complete.
       leo_migration {
-        memberEmails = [
-          ${terra.leo.migration.emails}
-        ]
+        memberEmails = ${terra.leo.migration.emails}
         descendantPermissions = [
           {
             resourceTypeName = "persistent-disk",
@@ -485,9 +479,7 @@ resourceAccessPolicies {
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This policy can be removed after the migration is complete.
       leo_migration {
-        memberEmails = [
-          ${terra.leo.migration.emails}
-        ]
+        memberEmails = ${terra.leo.migration.emails}
         descendantPermissions = [
           {
             resourceTypeName = "google-project",
