--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -3,6 +3,9 @@ akka {
     server {
       idle-timeout = 180 s
       request-timeout = 60 s
+      parsing {
+        max-uri-length = 16k
+      }
     }
     host-connection-pool {
       max-open-requests = 16384
