unit tests pass

--- a/src/test/resources/sam.conf
+++ b/src/test/resources/sam.conf
@@ -6,6 +6,10 @@ admin {
   serviceAccountAdmins = ${?SERVICE_ACCOUNT_ADMINS}
 }
 
+googleServices {
+  serviceAgents = "compute-service"
+}
+
 resourceAccessPolicies {
   resource_type_admin {
     workspace {
