Also need read_policies

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -306,6 +306,7 @@ resourceAccessPolicies {
           {
             resourceTypeName = "workspace",
             actions = [
+              "read_policies",
               "add_child"
             ]
           }
@@ -487,6 +488,7 @@ resourceAccessPolicies {
           {
             resourceTypeName = "google-project",
             actions = [
+              "read_policies",
               "add_child"
             ]
           }
