IA-5602 fix: use roles instead, serialize action and resource access policy additions

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -250,6 +250,11 @@ resourceTypes = {
           "read"
         ]
       }
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration = {
+        roleActions = ["read_policies", "add_child"]
+      }
     }
     authDomainConstrainable = true
     allowLeaving = true
@@ -679,6 +684,11 @@ resourceTypes = {
       pet-creator = {
         roleActions = ["create-pet"]
       }
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_mgiration = {
+        roleActions = ["read_policies", "add_child"]
+      }
     }
     reuseIds = true
   }
@@ -829,6 +839,11 @@ resourceTypes = {
       manager = {
         roleActions = ["status", "delete", "read_policies"]
       }
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration = {
+        roleActions = ["read_policies", "get_parent", "set_parent"]
+      }
     }
     reuseIds = false
   }
@@ -864,6 +879,11 @@ resourceTypes = {
       }
       manager = {
         roleActions = ["delete", "read", "read_policies"]
+      }
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration = {
+        roleActions = ["read_policies", "get_parent", "set_parent"]
       }
     }
     reuseIds = false
