Add back sam.conf

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -298,6 +298,17 @@ resourceAccessPolicies {
           }
         ]
       }
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "workspace",
+            roles = ["leo_migration"]
+          }
+        ]
+      }
     }
     managed-group {
       support {
@@ -427,6 +438,45 @@ resourceAccessPolicies {
               # leo checks for user or owner role, rawls really only needs delete and status actions
               "owner"
             ]
+          }
+        ]
+      }
+    }
+    notebook-cluster {
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "notebook-cluster",
+            roles = ["leo_migration"]
+          }
+        ]
+      }
+    }
+    persistent-disk {
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "persistent-disk",
+            roles = ["leo_migration"]
+          }
+        ]
+      }
+    }
+    google-project {
+      # See https://broadworkbench.atlassian.net/browse/IA-5062
+      # This policy can be removed after the migration is complete.
+      leo_migration {
+        memberEmails = ${terra.leo.migration.emails}
+        descendantPermissions = [
+          {
+            resourceTypeName = "google-project",
+            roles = ["leo_migration"]
           }
         ]
       }
