--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -251,7 +251,7 @@ resourceTypes = {
         ]
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
-      # This policy can be removed after the migration is complete.
+      # This role can be removed after the migration is complete.
       leo_migration = {
         roleActions = ["read_policies", "add_child"]
       }
@@ -685,7 +685,7 @@ resourceTypes = {
         roleActions = ["create-pet"]
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
-      # This policy can be removed after the migration is complete.
+      # This role can be removed after the migration is complete.
       leo_mgiration = {
         roleActions = ["read_policies", "add_child"]
       }
@@ -840,7 +840,7 @@ resourceTypes = {
         roleActions = ["status", "delete", "read_policies"]
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
-      # This policy can be removed after the migration is complete.
+      # This role can be removed after the migration is complete.
       leo_migration = {
         roleActions = ["read_policies", "get_parent", "set_parent"]
       }
@@ -881,7 +881,7 @@ resourceTypes = {
         roleActions = ["delete", "read", "read_policies"]
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
-      # This policy can be removed after the migration is complete.
+      # This role can be removed after the migration is complete.
       leo_migration = {
         roleActions = ["read_policies", "get_parent", "set_parent"]
       }
