--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -252,7 +252,7 @@ resourceTypes = {
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This role can be removed after the migration is complete.
-      leo_migration = {
+      leo_migrator = {
         roleActions = ["read_policies", "add_child"]
       }
     }
@@ -686,7 +686,7 @@ resourceTypes = {
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This role can be removed after the migration is complete.
-      leo_mgiration = {
+      leo_migrator = {
         roleActions = ["read_policies", "add_child"]
       }
     }
@@ -841,7 +841,7 @@ resourceTypes = {
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This role can be removed after the migration is complete.
-      leo_migration = {
+      leo_migrator = {
         roleActions = ["read_policies", "get_parent", "set_parent"]
       }
     }
@@ -882,7 +882,7 @@ resourceTypes = {
       }
       # See https://broadworkbench.atlassian.net/browse/IA-5062
       # This role can be removed after the migration is complete.
-      leo_migration = {
+      leo_migrator = {
         roleActions = ["read_policies", "get_parent", "set_parent"]
       }
     }
