--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -305,7 +305,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "workspace",
-            roles = ["leo_migration"]
+            roles = ["leo_migrator"]
           }
         ]
       }
@@ -450,7 +450,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "notebook-cluster",
-            roles = ["leo_migration"]
+            roles = ["leo_migrator"]
           }
         ]
       }
@@ -463,7 +463,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "persistent-disk",
-            roles = ["leo_migration"]
+            roles = ["leo_migrator"]
           }
         ]
       }
@@ -476,7 +476,7 @@ resourceAccessPolicies {
         descendantPermissions = [
           {
             resourceTypeName = "google-project",
-            roles = ["leo_migration"]
+            roles = ["leo_migrator"]
           }
         ]
       }
