hide akka-http server header

--- a/src/main/resources/sam.conf
+++ b/src/main/resources/sam.conf
@@ -6,6 +6,7 @@ akka {
       parsing {
         max-uri-length = 16k
       }
+      server-header = ""
     }
     host-connection-pool {
       max-open-requests = 16384
